objects/Atlas_KPIs_additional__x.object
<CustomObject>
    <description>Atlas additional data containing basic account&apos;s KPIs (External Object)</description>
    <externalDataSource>OData_Source</externalDataSource>
    <externalName>VOCGLOM_1_Q019Results</externalName>
    <fields>
        <fullName>Account_customer__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MMIDFGUID_T</description>
        <externalDeveloperName>MMIGUID__MMIDFGUID_T</externalDeveloperName>
        <label>Account Customer</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Sts R8 field from Atlas: MABBUSUNT</description>
        <externalDeveloperName>MABBUSUNT</externalDeveloperName>
        <inlineHelpText>ABB Business Unit</inlineHelpText>
        <label>Business Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MCACNTRY</description>
        <externalDeveloperName>MMIGUID__MCACNTRY</externalDeveloperName>
        <inlineHelpText>Reporting country code</inlineHelpText>
        <label>Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSO_contract__c</fullName>
        <description>StS R8 field from Atlas: DSO</description>
        <externalDeveloperName>DSO_REAL</externalDeveloperName>
        <inlineHelpText>The targeted number of days to collect payment from the customer.</inlineHelpText>
        <label>Days Sales Outstanding (contractual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSO_contract_formatted__c</fullName>
        <description>StS R8 fiels from Atlas: DSO_F</description>
        <externalDeveloperName>DSO_F</externalDeveloperName>
        <label>DSO (contractual) formatted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSO_real__c</fullName>
        <description>StS R8 field from Atlas: DSO_REAL</description>
        <externalDeveloperName>DSO</externalDeveloperName>
        <inlineHelpText>The average number of days to collect payment from the customer. DSO = (Open receivables/12 sales months)*365</inlineHelpText>
        <label>Days Sales Outstanding (real)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSO_real_formatted__c</fullName>
        <description>StS R8 from Atlas: DSO_REAL_F</description>
        <externalDeveloperName>DSO_REAL_F</externalDeveloperName>
        <inlineHelpText>DSO_REAL_F</inlineHelpText>
        <label>DSO (real) formatted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>StS R8 field from Atlas: MABDIVIS</description>
        <externalDeveloperName>MABDIVIS</externalDeveloperName>
        <inlineHelpText>ABB Division</inlineHelpText>
        <label>Division</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>MMIGUID__MMIDFGUID</description>
        <externalDeveloperName>MMIGUID__MMIDFGUID</externalDeveloperName>
        <label>Account</label>
        <length>10</length>
        <referenceTargetField>Account.GUID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Atlas KPIs (additional data)</relationshipLabel>
        <relationshipName>VOCGLOM_1_Q019Results</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>ID</description>
        <externalDeveloperName>ID</externalDeveloperName>
        <label>ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Total__c</fullName>
        <description>StS R8 field from Atlas: ORDERS_TOTAL</description>
        <externalDeveloperName>ORDERS</externalDeveloperName>
        <inlineHelpText>Total orders ot the accounts</inlineHelpText>
        <label>Orders Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>StS R8 field from Atlas: MABDFPRDG</description>
        <externalDeveloperName>MABPRDGRP</externalDeveloperName>
        <inlineHelpText>ABB Product Group</inlineHelpText>
        <label>Product Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_disputed_amount__c</fullName>
        <description>Sts R8 field from Atlas: DISPUTED</description>
        <externalDeveloperName>DISPUTED</externalDeveloperName>
        <inlineHelpText>The total amount of disputed ABB invoices with the customer.</inlineHelpText>
        <label>Total disputed amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_disputed_amount_formatted__c</fullName>
        <description>StS R8 field from Atlas: DISPUTED_F</description>
        <externalDeveloperName>DISPUTED_F</externalDeveloperName>
        <inlineHelpText>The amount of the invoices being the subject of pending dispute.</inlineHelpText>
        <label>Total disputed amount (foramtted)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotaledProperties__c</fullName>
        <description>TotaledProperties</description>
        <externalDeveloperName>TotaledProperties</externalDeveloperName>
        <label>TotaledProperties</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>StS R8 field from Atlas: A0CALYEAR</description>
        <externalDeveloperName>A0CALYEAR</externalDeveloperName>
        <inlineHelpText>Accounting year</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Atlas_KPIs_additional</label>
    <pluralLabel>Atlas_KPIs_additional</pluralLabel>
</CustomObject>